Translate 2022-05-19-quinoa-modern-ui-with-no-hassle.adoc.po

--- a/l10n/po/ja_JP/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-19 15:15+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-27 15:55+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: no\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:1
@@ -24,7 +24,7 @@ msgstr "adamevin"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-05-19"
 msgstr "2022-05-19"
 
@@ -36,27 +36,27 @@ msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Quinoa extension takes care of all the Web UI build/wiring/dev-mode hassles to let you focus of your Quarkus web application logic."
-msgstr "Quinoa拡張機能を使用すると、ウェブUIの構築、配線、デバイスモードに関するすべての面倒な作業がなくなり、Quarkusのウェブアプリケーションロジックに集中することができます。"
+msgstr "Quinoaエクステンションを使用すると、ウェブUIのビルド、結合、devモードに関するすべての面倒な作業の面倒を見てくれ、Quarkusのウェブアプリケーションロジックに集中することができます。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "web gui react angular nodejs frontend extension"
 msgstr "web gui react angular nodejs frontend extension"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quinoa - A Quarkus extension to create Modern UI with no hassle"
-msgstr "Quinoa - Modern UIを手間なく作成するためのQuarkus拡張機能"
+msgstr "Quinoa - Modern UIを手間なく作成するためのQuarkusエクステンション"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:11
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quinoa"
-msgstr "キヌア"
+msgstr "Quinoa"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:11
@@ -66,39 +66,34 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:14
-#, fuzzy
 msgid "Quinoa... To be honest I wasn't really a fan at first, but then my wife made them in a bowl like a salad with avocado and raw salmon. Now I really enjoy it with a touch of soy sauce. Let's not digress too much, I am not here to talk about healthy food in this post, this is about an extension to enjoy coding modern UI with Quarkus."
-msgstr "キヌア...正直最初はあまり好きではなかったのですが、妻がアボカドや生サーモンと一緒にサラダのようにボウルに入れて作ってくれたんです。今では、醤油を少し垂らして食べるのがとても美味しいです。余談ですが、この記事では健康的な食べ物について話すのではなく、QuarkusでモダンなUIをコーディングして楽しむための拡張機能について話しています。"
+msgstr "Quinoa...正直最初はあまり好きではなかったのですが、妻がアボカドや生サーモンと一緒にサラダのようにボウルに入れて作ってくれたんです。今では、醤油を少し垂らして食べるのがとても美味しいです。余談ですが、この記事では健康的な食べ物について話すのではなく、QuarkusでモダンなUIをコーディングして楽しむためのエクステンションについて話しています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:16
-#, fuzzy
 msgid "This extension is not a Quarkus core extension, it is available as part of the Quarkiverse. Early feedback and contribution are requested to mature the idea."
-msgstr "この拡張機能はQuarkusのコア拡張機能ではなく、Quarkiverseの一部として利用可能です。このアイデアを成熟させるために、初期のフィードバックと貢献をお願いします。"
+msgstr "このエクステンションはQuarkusのコアエクステンションではなく、Quarkiverseの一部として利用可能です。このアイデアを成熟させるために、初期のフィードバックと貢献をお願いします。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Get started"
-msgstr "スタート"
+msgstr "入門"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:20
-#, fuzzy
 msgid "Create a new Quinoa project (with a base Quinoa starter code):"
 msgstr "新しいQuinoaプロジェクト（ベースとなるQuinoaスターターコードを含む）を作成します。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:22
-#, fuzzy
 msgid "With https://code.quarkus.io/?a=quinoa-bowl&j=17&e=io.quarkiverse.quinoa%3Aquarkus-quinoa[code.quarkus.io]"
-msgstr "link:https://code.quarkus.io/?a=quinoa-bowl&j=17&e=io.quarkiverse.quinoa%3Aquarkus-quinoa[code.quarkus.ioを] 使用した場合"
+msgstr "link:https://code.quarkus.io/?a=quinoa-bowl&j=17&e=io.quarkiverse.quinoa%3Aquarkus-quinoa[code.quarkus.io] を使用した場合"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:23
-#, fuzzy
 msgid "With the https://quarkus.io/guides/cli-tooling[Quarkus CLI]:"
-msgstr "link:https://quarkus.io/guides/cli-tooling[Quarkus CLIを] 使用した場合。"
+msgstr "link:https://quarkus.io/guides/cli-tooling[Quarkus CLI] を使用した場合:"
 
 #. type: delimited block -
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:26
@@ -108,9 +103,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:29
-#, fuzzy
 msgid "Then start the live-coding *and navigate to http://0.0.0.0:8080/quinoa.html*:"
-msgstr "そして、ライブコーディングを開始 *し、<a href=\"http://0.0.0.0:8080/quinoa.html\" class=\"bare\">http://0.0.0.0:8080/quinoa.html</a>* に移動します。"
+msgstr "そして、ライブコーディングを開始し、* http://0.0.0.0:8080/quinoa.html に移動*します。"
 
 #. type: delimited block -
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:32
@@ -120,93 +114,80 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:35
-#, fuzzy
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#getting-started[Here] is the Quinoa guide to go deeper and configure your app with any Node based Web UI framework such as React, Angular, Lit, Webpack, Rollup, ..."
-msgstr "link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#getting-started[ここでは] 、より深く、React、Angular、Lit、Webpack、Rollupなどの任意のNodeベースのWeb UIフレームワークであなたのアプリを構成するためのQuinoaのガイドです..."
+msgstr "link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#getting-started[これ] は、より深く、React、Angular、Lit、Webpack、Rollupなどの任意のNodeベースのWeb UIフレームワークであなたのアプリを構成するためのQuinoaのガイドです..."
 
 #. type: Title ===
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "A bit of context"
-msgstr "背景を少し説明すると"
+msgstr "ちょっとした背景説明"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:39
-#, fuzzy
 msgid "Alongside Quarkus, interacting with web frameworks such as React and Angular is a natural need. Many users have been requesting a smooth integration since the early stages of Quarkus (https://github.com/quarkusio/quarkus/issues/588[#588]). This is why I created the Quinoa extension for Quarkus."
-msgstr "Quarkusと並んで、ReactやAngularといったWebフレームワークとの連携は、当然のニーズです。多くのユーザーは、Quarkusの初期段階から、スムーズな統合を要望していました link:https://github.com/quarkusio/quarkus/issues/588[（#588] ）。そのため、Quarkus用のQuinoaエクステンションを作成しました。"
+msgstr "Quarkusと共に、ReactやAngularといったWebフレームワークとの連携は、自然なニーズです。多くのユーザーは、Quarkusの初期段階から、スムーズな統合を要望していました ( link:https://github.com/quarkusio/quarkus/issues/588[#588] ）。そのため、Quarkus用のQuinoaエクステンションを作成しました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:41
-#, fuzzy
 msgid "Since the creation of Quarkus (3 years ago), link:#existing-articles[many blog articles] have popped up to help in that matter, most of them taking advantage of the frontend-maven-plugin. As the creator of code.quarkus.io, I have also been confronted with this situation and I, like many others, have filled the gap using this plugin. It does the job for sure and has been good enough to fill the need for the time being. Unfortunately the overall process could be more streamlined and easier to get started with, it involves a lot of configuration, some tricky setup to copy the resources to the right place and test the frontend at the right moment. Live coding requires starting two processes and a proxy to make it work together."
-msgstr "Quarkusが誕生して以来（3年前）、この問題を解決するために link:#existing-articles[多くのブログ記事が] 作成されましたが、そのほとんどはfrontend-maven-pluginを利用したものでした。code.quarkus.ioの作成者として、私もこの状況に直面し、他の多くの人と同様に、このプラグインを使用してギャップを埋めました。このプラグインは確かに仕事をし、当面のニーズを満たすには十分でした。残念ながら、全体的なプロセスはもっと合理的で簡単に始められるはずです。多くの設定、リソースを正しい場所にコピーするためのトリッキーなセットアップ、適切なタイミングでフロントエンドをテストすることが必要です。ライブコーディングでは、2つのプロセスを起動し、それを一緒に動作させるためのプロキシが必要です。"
+msgstr "Quarkusが誕生して以来（3年前）、この問題を解決するために link:#existing-articles[多くのブログ記事] が作成されましたが、そのほとんどはfrontend-maven-pluginを利用したものでした。code.quarkus.ioの作成者として、私もこの状況に直面し、他の多くの人と同様に、このプラグインを使用してギャップを埋めました。このプラグインは確かに仕事をし、当面のニーズを満たすには十分でした。残念ながら、全体的なプロセスはもっと合理的で簡単に始められるはずです。多くの設定、リソースを正しい場所にコピーするためのトリッキーなセットアップ、適切なタイミングでフロントエンドをテストすることが必要です。ライブコーディングでは、2つのプロセスを起動し、それを一緒に動作させるためのプロキシが必要です。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Let's start cooking"
-msgstr "料理をはじめよう"
+msgstr "調理をはじめよう"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:45
-#, fuzzy
 msgid "With this experience behind me, I was in a good position to contribute something to ease our lives a bit. I put an eye to all the needs, issues, propositions and blog articles and came up with a new extension to create healthy modern user-interfaces (UI) with Quarkus: Quinoa (standing for Quarkus UI with NO hAssle :)."
-msgstr "この経験を背景に、私は私たちの生活を少し楽にするために何か貢献する良い立場にありました。私は、すべてのニーズ、問題、提案、ブログ記事に目を通し、Quarkusで健康的でモダンなユーザーインターフェース（UI）を作成するための新しい拡張機能、Quinoa（Quarkus UI with NO HAssle : の略）を考え出しました。"
+msgstr "この経験を背景に、私は私たちの生活を少し楽にするために何か貢献する良い立場にありました。私は、すべてのニーズ、問題、提案、ブログ記事に目を通し、Quarkusで健康的でモダンなユーザーインターフェース（UI）を作成するための新しいエクステンション、Quinoa（Quarkus UI with NO HAssle : の略）を考え出しました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:47
-#, fuzzy
 msgid "Quinoa is taking care of hiding all the tasks around Web UI build/wiring/live-config to let you take care of your web application logic. Whether you create a full-stack Single Page Application or Microservice (micro-frontend); things are made easier for you."
-msgstr "Quinoaは、Web UIの構築/配線/ライブ設定にまつわるすべてのタスクを隠蔽し、Webアプリケーションのロジックに専念できるようにします。フルスタックのシングルページアプリケーションやマイクロサービス（マイクロフロントエンド）を作成する場合でも、物事をより簡単にすることができます。"
+msgstr "Quinoaは、Web UIのビルド/結合/ライブ設定にまつわるすべてのタスクを隠蔽し、Webアプリケーションのロジックに専念できるようにします。フルスタックのシングルページアプリケーションやマイクロサービス（マイクロフロントエンド）を作成する場合でも、物事をより簡単にすることができます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:49
-#, fuzzy
 msgid "Node.js has great tooling to create modern frontend web applications. Quarkus has a broad ecosystem to build reliable modern backends in the cloud (microservices, rest, DBs, events, cloud native…). Quinoa is the glue to get the best of both worlds."
 msgstr "Node.jsには、モダンなフロントエンドのWebアプリケーションを作成するための優れたツールがあります。Quarkusには、クラウドで信頼性の高いモダンなバックエンドを構築するための幅広いエコシステムがあります（マイクロサービス、レスト、DB、イベント、クラウド・ネイティブ...）。Quinoaは、この2つの世界の長所を得るための接着剤です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:51
-#, fuzzy
 msgid "The only prerequisite for the NodeJS project to be compatible with Quinoa is to have a `build` script. It should produce static files in a specific directory (index.html, javascript, css, ...). Since teams can be different, to make everyone happy, it is possible to either have the web UI in the Quarkus project (default is `src/main/webui`) or outside (as long as it is available on the disk at build time)."
 msgstr "NodeJSプロジェクトがQuinoaと互換性を持つための唯一の前提条件は、 `build` スクリプトを持っていることです。これは、特定のディレクトリに静的なファイル（index.html、javascript、css、...）を生成する必要があります。チームはさまざまなので、全員が満足できるように、ウェブUIをQuarkusプロジェクト内（デフォルトは `src/main/webui` ）または外（ビルド時にディスク上で利用可能である限り）に置くことが可能です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:53
-#, fuzzy
 msgid "It is not necessary (but possible) to https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#package-manager[configure the package manager] (NPM, Yarn or PNPM), it will be auto-detected depending on the project lockfile."
 msgstr "link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#package-manager[パッケージマネージャ] （NPM、Yarn、PNPM）を link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#package-manager[設定] する必要はありません（可能です）。プロジェクトのロックファイルによって自動的に検出されます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:55
-#, fuzzy
 msgid "Quinoa will take care of the generated UI static files. During the Quarkus build, they will be bundled in the jar or native binary. At runtime, they will be served as efficiently as any other static resource in Quarkus. UI developers were also asking to enable Single Page App routing, it is now just a https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#spa-routing[boolean configuration]."
 msgstr "生成されたUI静的ファイルは、Quinoaで処理されます。Quarkusのビルド時に、jarまたはネイティブバイナリにバンドルされます。実行時には、Quarkusの他の静的リソースと同じように効率的に提供されます。UI開発者は、シングルページアプリのルーティングを有効にするよう求めていましたが、現在は link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#spa-routing[ブール値で設定] するだけです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:58
-#, fuzzy
 msgid "Now, what about live coding? It’s a popular feature of Quarkus and most NodeJS UI frameworks already have such a mode.  Quinoa provides two options:"
 msgstr "さて、ライブコーディングはどうでしょうか。これはQuarkusの人気機能で、ほとんどのNodeJS UIフレームワークにはすでにこのようなモードがあります。Quinoaには2つのオプションがあります。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:60
-#, fuzzy
 msgid "Delegate to the UI live coding server. https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#dev-server[You configure the port of the UI server]. By convention Quinoa will call the `start` script from the package.json to start the UI server process. Then it will transparently proxy relevant requests to the given port."
-msgstr "UIライブコーディングサーバーに委譲します。 link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#dev-server[UIサーバーのポートを設定] します。慣習として、Quinoa は UI サーバープロセスを開始するために package.json から `start` スクリプトを呼び出します。その後、指定されたポートに関連するリクエストを透過的にプロキシします。"
+msgstr "UIライブコーディングサーバーに委譲。 link:https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/#dev-server[UIサーバーのポートを設定] します。慣習として、Quinoa は UI サーバープロセスを開始するために package.json から `start` スクリプトを呼び出します。その後、指定されたポートに関連するリクエストを透過的にプロキシします。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:61
-#, fuzzy
 msgid "Quarkus watches the files and Quinoa triggers a new Web UI build on changes (you can configure different builds for dev and prod)."
-msgstr "Quarkusはファイルを監視し、Quinoaは変更時に新しいWeb UIビルドをトリガーします（devとprodで異なるビルドを構成することができます）。"
+msgstr "Quarkusがファイルを監視し、Quinoaは変更時に新しいWeb UIビルドをトリガー（devとprodで異なるビルドを構成することができます）。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:63
-#, fuzzy
 msgid "Either way, when starting Quarkus dev-mode your Web UI will be served seamlessly (by default on http://0.0.0.0:8080). Both are viable options and allow you to live-code on both backend and frontend at the same time with close to no setup! Pretty awesome right?"
-msgstr "どちらの方法でも、Quarkusの開発モードを起動すると、Web UIがシームレスに提供されます（デフォルトでは http://0.0.0.0:8080 。どちらも実行可能なオプションで、バックエンドとフロントエンドの両方を同時にライブコーディングすることができます。かなり素晴らしいでしょう？"
+msgstr "どちらの方法でも、Quarkusのdevモードを起動すると、Web UIがシームレスに提供されます（デフォルトでは http://0.0.0.0:8080 ）。どちらも実行可能なオプションで、バックエンドとフロントエンドの両方を同時にライブコーディングすることができます。かなり素晴らしいでしょう？"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:64
@@ -216,25 +197,22 @@ msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:67
-#, fuzzy
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/"
 msgstr " https://quarkiverse.github.io/quarkiverse-docs/quarkus-quinoa/dev/ "
 
 #. type: Title ===
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:69
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Articles on modern UI development with Quarkus before Quinoa"
-msgstr "Quarkusを使ったモダンUI開発に関する記事（Quinoaの前に"
+msgstr "Quinoa以前のQuarkusを使ったモダンUI開発に関する記事"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:72
-#, fuzzy
 msgid "https://quarkus.io/blog/gui-react-patternfly/[Adding Eyecandy to your Quarkus App with React and Patternfly]"
 msgstr "link:https://quarkus.io/blog/gui-react-patternfly/[ReactとPatternflyでQuarkusアプリにEyecandyを追加する]"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc:73
-#, fuzzy
 msgid "https://blog.marcnuri.com/react-quarkus-integration-using-maven[React + Quarkus integration using Maven]"
 msgstr "link:https://blog.marcnuri.com/react-quarkus-integration-using-maven[Mavenを使用したReact + Quarkusの統合]"
 
