--- a/l10n/po/ja_JP/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-25 16:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-27 22:23+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
@@ -26,7 +26,7 @@ msgstr "gsmet"
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
 #, no-wrap
 msgid "2022-05-25"
-msgstr ""
+msgstr "2022-05-25"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
@@ -38,7 +38,7 @@ msgstr "post"
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
 #, no-wrap
 msgid "2.9.2.Final is the second maintenance release for our 2.9 release train."
-msgstr ""
+msgstr "2.9.2.Final は、2.9 リリーストレインの 2 番目のメンテナンスリリースです。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
@@ -50,22 +50,22 @@ msgstr "release"
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:1
 #, no-wrap
 msgid "Quarkus 2.9.2.Final released - Maintenance release"
-msgstr ""
+msgstr "Quarkus 2.9.2.Finalリリース - メンテナンスリリース"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:12
 msgid "Today, we released Quarkus 2.9.2.Final, our second maintenance release for 2.9.  It comes with a bunch of fixes and documentation improvements."
-msgstr ""
+msgstr "本日、2.9の2回目のメンテナンスリリースであるQuarkus 2.9.2.Finalをリリースしました。 これには、多数の修正とドキュメントの改善が含まれます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:14
 msgid "It is a safe upgrade for anyone already using 2.9 and is highly recommended."
-msgstr ""
+msgstr "これは、すでに2.9を使用している人には安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:16
 msgid "If you are not using 2.9 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[2.9 migration guide]."
-msgstr "2.9 をまだ使用していない場合は、https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[2.9 移行ガイド] を参照してください。"
+msgstr "2.9 をまだ使用していない場合は、 https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[2.9 移行ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:17
@@ -76,7 +76,7 @@ msgstr "完全な変更履歴"
 #. type: Plain text
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:20
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.9.2.Final[the full changelog of 2.9.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.9.2.Final[2.9.2.Finalの完全な変更履歴は、GitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc:21
