Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
@@ -28,18 +28,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:12
 msgid "This guide is the companion from the xref:stork.adoc[Stork Getting Started Guide].  It explains the configuration and usage of SmallRye Stork integration in Quarkus."
-msgstr ""
+msgstr "このガイドは、 link:stork.html[Stork 入門ガイド]と対です。QuarkusでのSmallRye Stork統合の設定と使用方法について説明しています。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-reference.adoc:13
 #, no-wrap
 msgid "Supported clients"
-msgstr ""
+msgstr "対応クライアント"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:16
 msgid "The current integration of Stork supports:"
-msgstr ""
+msgstr "現在のStork統合で対応しているのは次の通りです:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:18
@@ -54,18 +54,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:21
 msgid "Warning: The gRPC client integration does not support statistic-based load balancers."
-msgstr ""
+msgstr "注意: gRPCクライアント統合は、統計ベースのロードバランサーをサポートしていません。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-reference.adoc:22
 #, no-wrap
 msgid "Available service discovery and selection"
-msgstr ""
+msgstr "利用可能なサービスディスカバリーと選択"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:25
 msgid "Check the https://smallrye.io/smallrye-stork[SmallRye Stork website] to find more about the provided service discovery and selection."
-msgstr ""
+msgstr "提供されるサービスディスカバリーと選択については、 link:https://smallrye.io/smallrye-stork[SmallRye Storkのウェブサイト]をご確認ください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-reference.adoc:26
@@ -76,12 +76,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:30
 msgid "Stork provides a service discovery support for Kubernetes, which goes beyond what Kubernetes provides by default.  It looks for all the pods backing up a Kubernetes service, but instead of applying a round-robin (as Kubernetes would do), it gives you the option to select the pod using a Stork load-balancer."
-msgstr ""
+msgstr "Storkは、Kubernetesがデフォルトで提供しているものを超える、Kubernetesのサービスディスカバリーサポートを提供します。これは、KubernetesのサービスをバックアップしているすべてのPodを探しますが、Kubernetesのようにラウンドロビンを適用するのではなく、Storkのロードバランサーを使用してポッドを選択するオプションを提供します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:32
 msgid "To use this feature, add the following dependency to your project:"
-msgstr ""
+msgstr "この機能を使用するには、プロジェクトに以下の依存関係を追加します。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/stork-reference.adoc:34
@@ -118,7 +118,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:49
 msgid "For each service expected to be exposed as a Kubernetes Service, configure the lookup:"
-msgstr ""
+msgstr "Kubernetes Serviceとして公開される予定の各サービスについて、ルックアップを設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:54
@@ -131,18 +131,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:58
 msgid "Stork looks for the Kubernetes Service with the given name (`my-service` in the previous example) in the specified namespace.  Instead of using the Kubernetes Service IP directly and let Kubernetes handle the selection and balancing, Stork inspects the service and retrieves the list of pods providing the service. Then, it can select the instance."
-msgstr ""
+msgstr "Storkは、指定された名前（前の例では `my-service` ）のKubernetes Serviceを指定された名前空間で探します。StorkはKubernetes ServiceのIPを直接使用し、選択とバランシングをKubernetesに任せるのではなく、サービスを検査し、サービスを提供しているポッドのリストを取得します。そして、インスタンスを選択することができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-reference.adoc:59
 #, no-wrap
 msgid "Implementing a custom service discovery"
-msgstr ""
+msgstr "カスタムサービスディスカバリーの実装"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:62
 msgid "Stork is extensible, and you can implement your own service discovery mechanism."
-msgstr ""
+msgstr "Storkは拡張性があり、独自のサービスディスカバリーメカニズムを実装することができます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/stork-reference.adoc:63
@@ -154,7 +154,7 @@ msgstr "依存関係"
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:65
 msgid "To implement your Service Discovery Provider, make sure your project depends on Core and Configuration Generator. The former brings classes necessary to implement custom discovery, the latter contains an annotation processor that generates classes needed by Stork."
-msgstr ""
+msgstr "サービス ディスカバリー プロバイダーを実装するには、プロジェクトが Core と Configuration Generator に依存していることを確認してください。前者はカスタムディスカバリーの実装に必要なクラスを提供し、後者はStorkが必要とするクラスを生成するアノテーションプロセッサを含んでいます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:79
@@ -185,7 +185,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/stork-reference.adoc:92
 msgid "If the provider is located in an extension, the configuration generator should be declared in the `annotationProcessorPaths` section of the runtime module using the default scope:"
-msgstr ""
+msgstr "プロバイダがエクステンションに配置されている場合、設定ジェネレータは実行時モジュールの `annotationProcessorPaths` セクションでデフォルトのスコープを使用して宣言する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:102
@@ -204,7 +204,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-reference.adoc:105
 #, no-wrap
 msgid "Implementing a service discovery provider"
-msgstr ""
+msgstr "サービスディスカバリープロバイダーの実装"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/stork-reference.adoc:110
@@ -220,7 +220,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:117
 msgid "The first step consists of implementing the `io.smallrye.stork.spi.ServiceDiscoveryProvider` interface:"
-msgstr ""
+msgstr "最初のステップは、 `io.smallrye.stork.spi.ServiceDiscoveryProvider` インターフェースの実装です。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:121
@@ -274,7 +274,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:149
 msgid "This implementation is straightforward."
-msgstr ""
+msgstr "この実装は単純です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:151
@@ -299,7 +299,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:156
 msgid "Then, we need to implement the `ServiceDiscovery` interface:"
-msgstr ""
+msgstr "次に、 `ServiceDiscovery` インターフェースを実装する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:163
@@ -363,19 +363,19 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:196
 msgid "Again, this implementation is simplistic.  Typically, instead of creating a service instance with values from the configuration, you would connect to a service discovery backend, look for the service and build the list of service instances accordingly.  That's why the method returns a `Uni`.  Most of the time, the lookup is a remote operation."
-msgstr ""
+msgstr "繰り返しになりますが、この実装は単純過ぎるものです。一般的には、設定から得た値でサービス・インスタンスを作成するのではなく、サービス・ディスカバリー・バックエンドに接続してサービスを探し、それに応じてサービス・インスタンスのリストを作成します。これが、このメソッドが `Uni` を返す理由です。ほとんどの場合、ルックアップはリモート操作で行われます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/stork-reference.adoc:197
 #, no-wrap
 msgid "Using your service discovery"
-msgstr ""
+msgstr "サービスディスカバリーの利用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:201
 #: upstream/_versions/main/guides/stork-reference.adoc:336
 msgid "In the project using it, don't forget to add the dependency on the module providing your implementation.  Then, in the configuration, just add:"
-msgstr ""
+msgstr "これを使用するプロジェクトでは、実装を提供するモジュールへの依存を忘れずに追加してください。そして、設定では、以下の追加だけが必要です:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:207
@@ -389,59 +389,59 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:210
 msgid "Then, Stork will use your implementation to locate the `my-service` service."
-msgstr ""
+msgstr "そして、Storkはあなたの実装を使って、 `my-service` のサービスを探します。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-reference.adoc:211
 #, no-wrap
 msgid "Implementing a custom service selection / load-balancer"
-msgstr ""
+msgstr "カスタムサービス選択/ロードバランサーの実装"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:214
 msgid "Stork is extensible, and you can implement your own service selection (load-balancer) mechanism."
-msgstr ""
+msgstr "Storkは拡張性があり、独自のサービス選択（ロードバランサー）機構を実装することができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:217
 msgid "To implement your Load Balancer Provider, make sure your project depends on Core and Configuration Generator. The former brings classes necessary to implement custom load balancer, the latter contains an annotation processor that generates classes needed by Stork."
-msgstr ""
+msgstr "ロードバランサープロバイダーを実装するには、プロジェクトが Core と Configuration Generator に依存していることを確認してください。前者はカスタムロードバランサーの実装に必要なクラスを提供し、後者はStorkが必要とするクラスを生成するアノテーションプロセッサを含んでいます。"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/stork-reference.adoc:243
 msgid "Similar to custom discovery providers, if the provider is located in an extension, the configuration generator should be declared in the `annotationProcessorPaths` section of the runtime module using the default scope."
-msgstr ""
+msgstr "カスタム ディスカバリー プロバイダと同様に、プロバイダがエクステンションに配置されている場合は、ランタイム モジュールの `annotationProcessorPaths` セクションでデフォルト スコープを使用して設定ジェネレータを宣言する必要があります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/stork-reference.adoc:245
 #, no-wrap
 msgid "Implementing a load balancer provider"
-msgstr ""
+msgstr "ロードバランサー・プロバイダーの実装"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:248
 msgid "Load balancer implementation consists of three elements:"
-msgstr ""
+msgstr "ロードバランサーの実装は3つの要素で構成されています:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:250
 msgid "`LoadBalancer` which is responsible for selecting service instances for a single Stork service"
-msgstr ""
+msgstr "`LoadBalancer` Stork サービスのサービスインスタンスを選択する責任があります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:251
 msgid "`LoadBalancerProvider` which creates instances of `LoadBalancer` for a given load balancer _type_"
-msgstr ""
+msgstr "`LoadBalancerProvider` ロードバランサーの _type_に応じて `LoadBalancer` のインスタンスを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:252
 msgid "`LoadBalancerProviderConfiguration` which is a configuration for the load balancer"
-msgstr ""
+msgstr "ロードバランサーの設定である `LoadBalancerProviderConfiguration`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:256
 msgid "A _type_, for example, `acme`, identifies each provider.  This _type_ is used in the configuration to reference the provider:"
-msgstr ""
+msgstr "_type_は、例えば `acme` のように、各プロバイダーを識別します。この _type_は、設定でプロバイダーを参照するために使用されます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:260
@@ -496,7 +496,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:292
 msgid "The next step is to implement the `LoadBalancer` interface:"
-msgstr ""
+msgstr "次のステップは、 `LoadBalancer` インターフェースを実装することです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:300
@@ -555,7 +555,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:325
 msgid "Again, this implementation is simplistic and just picks a random instance from the received list."
-msgstr ""
+msgstr "繰り返しになりますが、この実装は単純過ぎるもので、受信したリストからランダムにインスタンスを選択するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:330
@@ -567,7 +567,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-reference.adoc:332
 #, no-wrap
 msgid "Using your load balancer"
-msgstr ""
+msgstr "ロードバランサーの使用"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-reference.adoc:341
@@ -580,4 +580,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:344
 msgid "Then, Stork will use your implementation to select the `my-service` service instance."
-msgstr ""
+msgstr "その後、Storkはあなたの実装を使って `my-service` のサービスインスタンスを選択します。"
