Update .po files

--- a/l10n/po/ja_JP/_versions/2.7/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/building-my-first-extension.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-07 16:14+0000\n"
+"POT-Creation-Date: 2022-05-30 17:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1671,7 +1671,7 @@ msgid ""
 "     -DprojectGroupId=org.acme \\\n"
 "     -DprojectArtifactId=greeting-app \\\n"
 "     -Dextensions=\"org.acme:greeting-extension:1.0.0-SNAPSHOT\" \\\n"
-"     -DnoExamples\n"
+"     -DnoCode\n"
 msgstr ""
 
 #. type: Plain text
