--- a/l10n/po/ja_JP/_versions/2.7/guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/funqy-knative-events.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-07 16:14+0000\n"
+"POT-Creation-Date: 2022-05-30 17:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -48,7 +48,9 @@ msgstr "link:funqy[Funqy の基礎] を読む。短時間で読めます!"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/funqy-knative-events.adoc:25
-msgid "Have gone through the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/index.html[Knative Tutorial], specifically link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[Brokers and Triggers]"
+#, fuzzy
+#| msgid "Have gone through the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/index.html[Knative Tutorial], specifically link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[Brokers and Triggers]"
+msgid "Have gone through the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/index.html[Knative Tutorial], specifically link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/eventing/eventing-trigger-broker.html[Brokers and Triggers]"
 msgstr "link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/index.html[Knativeチュートリアル] 、特に link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[ブローカーとトリガー] を一読していること"
 
 #. type: Title ==
@@ -64,7 +66,9 @@ msgstr "Minikube 環境で Knative をローカルに設定することは、こ
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/funqy-knative-events.adoc:34
-msgid "Specifically you should run the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[Brokers and Triggers] tutorial as this guide requires that you can invoke on a Broker to trigger the quickstart code."
+#, fuzzy
+#| msgid "Specifically you should run the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[Brokers and Triggers] tutorial as this guide requires that you can invoke on a Broker to trigger the quickstart code."
+msgid "Specifically you should run the link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial/eventing/eventing-trigger-broker.html[Brokers and Triggers] tutorial as this guide requires that you can invoke on a Broker to trigger the quickstart code."
 msgstr "このガイドでは、クイックスタートコードをトリガーするためにブローカーを呼び出す必要があるため、特に link:https://redhat-developer-demos.github.io/knative-tutorial/knative-tutorial-eventing/eventing-trigger-broker.html[ブローカーとトリガー] のチュートリアルを実行する必要があります。"
 
 #. type: Title ==
