--- a/l10n/po/ja_JP/_versions/2.7/guides/kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/kubernetes-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-07 16:14+0000\n"
+"POT-Creation-Date: 2022-05-30 17:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,7 +27,9 @@ msgstr "Kubernetes Config"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/kubernetes-config.adoc:12
-msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or Openshift `DeploymentConfig`)."
+#, fuzzy
+#| msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or Openshift `DeploymentConfig`)."
+msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or OpenShift `DeploymentConfig`)."
 msgstr "Quarkusには、 `kubernetes-config` エクステンションが含まれており、開発者はKubernetes link:https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] と link:https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] を Quarkusアプリケーションを実行している link:https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] にマウントしなくても設定ソースとして使用することができます。"
 
 #. type: Title ==
