--- a/l10n/po/ja_JP/_versions/2.7/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/native-and-ssl.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-07 16:15+0000\n"
+"POT-Creation-Date: 2022-05-30 17:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -193,7 +193,9 @@ msgstr "Amazon Services エクステンション(`quarkus-amazon-*`),"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/native-and-ssl.adoc:87
-msgid "the Consul Config extension (`quarkus-consul-config`),"
+#, fuzzy
+#| msgid "the Consul Config extension (`quarkus-consul-config`),"
+msgid "the Consul Config extension (`quarkus-config-consul`),"
 msgstr "Consul Config エクステンション(`quarkus-consul-config`),"
 
 #. type: Plain text
