--- a/l10n/po/ja_JP/_versions/2.7/guides/mutiny-primer.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/mutiny-primer.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-07 16:15+0000\n"
+"POT-Creation-Date: 2022-05-30 17:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -746,14 +746,16 @@ msgstr "uni.onItem().call(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.7/guides/mutiny-primer.adoc:299
-#, no-wrap
-msgid "uni.eventually) → System.out.println(\"eventually\""
+#, fuzzy, no-wrap
+#| msgid "uni.eventually) → System.out.println(\"eventually\""
+msgid "uni.eventually(() → System.out.println(\"eventually\"))"
 msgstr "uni.eventually) → System.out.println(\"eventually\""
 
 #. type: Table
 #: upstream/_versions/2.7/guides/mutiny-primer.adoc:300
-#, no-wrap
-msgid "uni.onItemOrFailure().invokeignoredItem, ignoredException) → System.out.println(\"eventually\""
+#, fuzzy, no-wrap
+#| msgid "uni.onItemOrFailure().invokeignoredItem, ignoredException) → System.out.println(\"eventually\""
+msgid "uni.onItemOrFailure().invoke((ignoredItem, ignoredException) → System.out.println(\"eventually\"))"
 msgstr "uni.onItemOrFailure().invokeignoredItem, ignoredException) → System.out.println(\"eventually\""
 
 #. type: Table
