Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-lambda-lambda-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-lambda-lambda-config.adoc.po
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-lambda-lambda-config.adoc:17
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #~ msgid "int"
 #~ msgstr "int"
