--- a/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc.po
@@ -266,7 +266,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:1502
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:74
@@ -274,7 +274,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:440
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:79
@@ -396,7 +396,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:1466
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:128
@@ -899,7 +899,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:1505
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/2.7/config/quarkus-openshift-openshift-config.adoc:418
