--- a/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-s2i-s2i-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/2.7/config/quarkus-s2i-s2i-config.adoc.po
@@ -61,7 +61,7 @@ msgstr ""
 #: upstream/_generated-config/2.7/config/quarkus-s2i-s2i-config.adoc:20
 #, no-wrap
 msgid "`binary`"
-msgstr ""
+msgstr "`binary`"
 
 #. type: Table
 #: upstream/_generated-config/2.7/config/quarkus-s2i-s2i-config.adoc:25
