--- a/l10n/po/ja_JP/_versions/2.7/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/openapi-swaggerui.adoc.po
@@ -88,7 +88,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.7/guides/openapi-swaggerui.adoc:43
 msgid "We will create a `Fruit` bean and a `FruitResource` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
-msgstr ""
+msgstr "ここでは、 `Fruit` Beanと `FruitResouce` RESTリソースを作成します（QuarkusでREST APIを構築する方法について詳しく知りたい場合は、 link:rest-json.html[Writing JSON REST servicesガイド]を参照してください）。"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/openapi-swaggerui.adoc:47
